Fix too wide right-side white space for the information section #19

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,6 +43,11 @@ html {
   width: 100%;
 }
 
+.page__inner--mobile {
+  margin: 0 auto;
+  max-width: 608px;
+}
+
 /* figure img */
 .responsive-media {
   max-width: 100%;
